--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,16 @@
+body{
+    background-color: black;
+    color: white;
+}
+.title{
+    width: 100%;
+    height: 10%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 table {
     width: 100%;
     border-collapse: collapse;
